--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+li {
+  font-weight: 500;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
